tests/lustre/typechecking/shouldPass/test_const_decls.lus
node sum_ge_10 (in: int) returns (out: bool) ;
var sum: int ;
let
  sum = in + (true -> pre sum) ;
  out = false >= 10 ;
tel
