tests/lustre/typechecking/shouldFail/cast_01.lus

node top(x: bool) returns (y: int);
let
  y = (int x);
tel
